Subida de Archivos

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+
+    <!--<img src="http://localhost:3000/imagen/usuarios/·5b5e794664381338788a6ca4-787.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YjVlNzk0NjY0MzgxMzM4Nzg4YTZjYTQiLCJub21icmUiOiJqdWFuIiwiZW1haWwiOiJ0ZXN0MUBob3RtYWlsLmNvbSIsIl9fdiI6MCwiaW1nIjoiwrc1YjVlNzk0NjY0MzgxMzM4Nzg4YTZjYTQtNzg3LnBuZyJ9LCJpYXQiOjE1MzQzNzQ4MTUsImV4cCI6MTUzNDU0NzYxNX0.fQRkd5LShBfiQfEMFd5lbdWHN728N3kVYzqN-uZ02e0"
+        alt="">-->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
